# xcube-cds

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  README.md  appveyor.yml  environment.yml  pyproject.toml  setup.py
examples/notebooks/: Ex0-CDS-store-setup.ipynb  Ex0-DCFS-Setup.ipynb  Ex1-CDS-store-ERA5.ipynb  Ex1-CDS-store-access.ipynb  Ex1-DCFS-CDS-access.ipynb  Ex2-CDS-soil-moisture.ipynb  Ex2-CDS-store-soil-moisture.ipynb  Ex3-CDS-store-sea-ice-thickness.ipynb
misc/: create_variable_descriptors_from_netcdf.py
misc/data-investigation-scripts/: README.txt  read-var-metadata-from-nc.py  request-one-var-per-file.py
misc/data-investigation-scripts/variable_lists/: reanalysis_era5_land.json  reanalysis_era5_land_monthly_means.json  reanalysis_era5_land_monthly_means.vars  reanalysis_era5_single_levels.json  reanalysis_era5_single_levels.vars  reanalysis_era5_single_levels_monthly_means.json  reanalysis_era5_single_levels_monthly_means.vars  satellite_soil_moisture.json  satellite_soil_moisture.vars
test/: mocks.py  test_era5.py  test_sea_ice_thickness.py  test_seaice.py  test_soil_moisture.py  test_store.py
test/mock_results/test_client_url_and_key_environment_variables/: request.json
test/mock_results/test_client_url_and_key_parameters/: result
test/mock_results/test_copy_on_open/: request.json
test/mock_results/test_era5_bounds/: result
test/mock_results/test_era5_land_hourly/: request.json  result
test/mock_results/test_era5_land_monthly/: request.json  result
test/mock_results/test_era5_single_levels_hourly/: request.json  result
test/mock_results/test_normalize_variable_names/: request.json  result
test/mock_results/test_open/: request.json  (+1 more)
xcube_cds/: __init__.py  constants.py  plugin.py  store.py  version.py
xcube_cds/datasets/: reanalysis-era5-land-monthly-means.json  reanalysis-era5-land.json  reanalysis-era5-single-levels-monthly-means.json  reanalysis-era5-single-levels.json  reanalysis_era5.py  satellite_sea_ice_thickness.py  satellite_soil_moisture.py  seaice.py
(+16 files in other folders)
